Fixed image URL

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <img src="https://cdn.shopify.com/s/files/1/0659/3023/2034/files/Coming_soon_banner.jpg?v=1758502366" alt="Coming Soon">
+  <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/main/coming-soon.jpg" alt="Coming Soon">
 </body>
 </html>
