Added second image on index

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 </head>
 <body>
   <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/main/coming-soon.jpg" alt="Coming Soon">
+<br> <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/refs/heads/main/coming%20soon%202.jpg" alt="Coming Soon">
 </body>
 </html>
