--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coming Soon</title>
+  <title>Diesel Designs</title>
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
+    body {
       background-color: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
+
     img {
       max-width: 90%;
       height: auto;
+      margin: 40px auto;
+      display: block;
     }
   </style>
 </head>
 <body>
   <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/main/coming-soon.jpg" alt="Coming Soon">
-<br> <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/refs/heads/main/coming%20soon%202.jpg" alt="Coming Soon">
+  <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/refs/heads/main/coming%20soon%202.jpg" alt="Coming Soon 2">
 </body>
 </html>
