--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Diesel Designs</title>
+  <title>Diesel Designs - Coming Soon!</title>
   <style>
     body {
       background-color: #000;
@@ -21,6 +21,7 @@
   </style>
 </head>
 <body>
+  <h2 style="color:white;">Launching soon — stay tuned!</h2>
   <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/main/coming-soon.jpg" alt="Coming Soon">
   <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/refs/heads/main/coming%20soon%202.jpg" alt="Coming Soon 2">
 </body>
