--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </style>
 </head>
 <body>
-  <h2 style="color:white;">Tester 2.2!</h2>
   <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/main/coming-soon.jpg" alt="Coming Soon">
   <img src="https://raw.githubusercontent.com/DieselDesigns2022/dieseldesignco/refs/heads/main/coming%20soon%202.jpg" alt="Coming Soon 2">
+  <h2 style="color:white;">I can't wait to share all the fun things with you!</h2>
 </body>
 </html>
